--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,11 @@
 .container {
   /* for preview */
-  /* border: 1px blue solid; */
+  /*border: 1px blue solid;*/
   /* end */
   display: grid;
   margin: 50px 0px 50px 0px;
-  grid-template-columns: repeat(4, 100px);
-  grid-template-rows: repeat(6, 100px);
+  grid-template-columns: repeat(4, 80px);
+  grid-template-rows: repeat(7, 80px);
   grid-gap: 10px 10px;
   justify-content: center;
   align-content: center;
@@ -13,15 +13,51 @@
 }
 
 .result {
-  background-color: mintcream;
+  /* mintcream for highlight color */
+  border: 2px black solid;
+  background-color: white;
   grid-row: 1 / span 2;
   grid-column: 1 / 5;
+  text-align: right;
+  padding-right: 5px;
+  line-height: 160px;
+  font-size: 36px;
 }
 
-.number {
-  background-color: beige;
+.operators {
+  display: grid;
+  grid-row: 3 / span 6;
+  grid-column: 1 / span 1;
+  grid-row-gap: 10px;
+  line-height: 60px;
 }
 
 .sign {
-  background-color: mistyrose;
+  /* mistyrose for highlight color */
+  background-color: lightsalmon;
+  text-align: center;
+  font-size: 28px;
+}
+
+.operands {
+  display: grid;
+  grid-row: 3 / span 6;
+  grid-template-columns: repeat(3, 80px);
+  grid-gap: 10px;
+  line-height: 100px;
+}
+
+.number {
+  /* beige for highlight color */
+  background-color: khaki;
+  text-align: center;
+  font-size: 30px;
+}
+
+.clear {
+  font-size: 24px;
+}
+
+.deletion {
+  font-size: 24px;
 }
